--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
     --dark-blue3: #373b61;
     --dark-blue4: #344763;
     --green: #55bc7e;
+    --dark-green: #198754;
     --light-green: #d3e8e1;
     --light-gray: #636972;
     --white: #ffffff;
@@ -57,6 +58,13 @@ h3 {
     font-size: 20px;
 }
 
+h4 {
+    color: var(--dark-blue2);
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 20px;
+}
+
 .page-header {
     position: absolute;
     left: 0;
@@ -100,7 +108,8 @@ h3 {
     padding: 10px 28px;
 }
 
-.navbar-light .navbar-nav .nav-link.active {
+.navbar-light .navbar-nav .nav-link.active,
+.navbar-light .navbar-nav .nav-link:hover {
     color: var(--green);
 }
 
@@ -172,13 +181,14 @@ h3 {
     padding: 80px 0;
 }
 
-.services img {
-    margin: 0 0 25px 0;
-}
-
 .services1 {
     padding: 80px 0;
     background-color: var(--bluish-cyan);
+}
+
+.services2 {
+    padding: 80px 0;
+    background-color: var(--white);
 }
 
 a.read-more {
@@ -189,8 +199,20 @@ a.read-more {
     text-decoration: none;
 }
 
+a.read-more:hover {
+    color: var(--dark-green);
+}
+
 a.read-more img {
     margin-left: 5px;
+    transition: 0.5s;
+    position: relative;
+    top: -1px;
+}
+
+a.read-more:hover img {
+    margin-left: 10px;
+    filter: opacity(0.5);
 }
 
 .news-letter {
@@ -213,6 +235,45 @@ a.read-more img {
 
 .news-letter .form-component .btn-success {
     width: 170px;
+}
+
+.navbar-light .navbar-nav .nav-item .get-it-now:hover,
+.form-component .btn-success:hover {
+    background: var(--dark-green);
+}
+
+.our-services {
+    padding: 80px 0;
+    background: rgba(236, 241, 244, 0.41);
+}
+
+.box {
+    background: #ffffff;
+    box-shadow: 0px 5px 30px rgba(36, 53, 63, 0.06);
+    transition: 0.5s;
+}
+
+.box:hover {
+    box-shadow: 0px 5px 10px rgba(36, 53, 63, 0.06);
+}
+
+.m-minus-10 {
+    margin-left: -10px;
+}
+
+.box h3 {
+    margin-bottom: 10px;
+}
+
+.box p {
+    font-size: 15px;
+}
+
+.btn-success {
+    background: var(--green);
+    color: var(--white);
+    padding: 11px 27px;
+    border: none;
 }
 
 @keyframes slideDown {
